package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"os"
	"os/signal"
	"syscall"

	characterpb "github.com/ToxicToast/Azkaban-Go/proto/warcraft/character"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/health"
	healthpb "google.golang.org/grpc/health/grpc_health_v1"
	"google.golang.org/grpc/reflection"
	"google.golang.org/grpc/status"
)

type svc struct {
	characterpb.UnimplementedWarcraftCharacterServiceServer
}

func buildCharacters() []*characterpb.Character {
	return []*characterpb.Character{
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
		{
			Id:           1,
			CharacterId:  "1234567890",
			UserId:       nil,
			Region:       "eu",
			Realm:        "blackmoore",
			Name:         "tøxictoast",
			DisplayRealm: nil,
			DisplayName:  nil,
			Gender:       nil,
			Faction:      nil,
			Race:         nil,
			Class:        nil,
			Spec:         nil,
			Level:        80,
			ItemLevel:    640,
			Guild:        nil,
			Rank:         nil,
			OldGuild:     nil,
			Inset:        nil,
			Avatar:       nil,
			Mythic:       136,
			Raid:         nil,
			LoggedinAt:   nil,
			ActivatedAt:  nil,
			CreatedAt:    "2025-04-22T10:55:03.057Z",
			UpdatedAt:    nil,
			DeletedAt:    nil,
		},
	}
}

func (s *svc) GetCharacters(ctx context.Context, in *characterpb.GetCharactersRequest) (*characterpb.GetCharactersResponse, error) {
	characters := buildCharacters()
	return &characterpb.GetCharactersResponse{
		Data:  characters,
		Total: int64(len(characters)),
	}, nil
}

func (s *svc) GetCharactersById(ctx context.Context, in *characterpb.GetCharacterByIdRequest) (*characterpb.Character, error) {
	characters := buildCharacters()
	for _, character := range characters {
		if character.Id == in.GetId() {
			return character, nil
		}
	}
	return nil, status.Errorf(codes.NotFound, "character not found")
}

func main() {
	stop := make(chan os.Signal, 1)
	signal.Notify(stop, os.Interrupt, syscall.SIGINT, syscall.SIGTERM)

	go func() {
		lis, err := net.Listen("tcp", ":8082")
		if err != nil {
			log.Fatal(err)
		}

		server := grpc.NewServer()
		characterpb.RegisterWarcraftCharacterServiceServer(server, &svc{})

		hs := health.NewServer()
		healthpb.RegisterHealthServer(server, hs)
		hs.SetServingStatus("warcraft", healthpb.HealthCheckResponse_SERVING)

		reflection.Register(server)

		log.Println("Warcraft stub listening on :8082")
		log.Fatal(server.Serve(lis))
	}()

	<-stop
	fmt.Println("Shutting down warcraft service...")

}
